--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,19 +9,19 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>com.acl.controller.employees</servlet-name>
-    <servlet-class>com.acl.controller.employees</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>com.acl.controller.employees</servlet-name>
-    <url-pattern>/emp</url-pattern>
-  </servlet-mapping>
-  <servlet>
     <servlet-name>com.acl.controller.empView</servlet-name>
     <servlet-class>com.acl.controller.empView</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>com.acl.controller.empView</servlet-name>
+    <url-pattern>/emp</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>com.acl.controller.empView1</servlet-name>
+    <servlet-class>com.acl.controller.empView</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>com.acl.controller.empView1</servlet-name>
     <url-pattern>/Manage Employees-view</url-pattern>
   </servlet-mapping>
 </web-app>
