--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>com.acl.controller.log_out_Servlet</servlet-name>
+    <servlet-class>com.acl.controller.log_out_Servlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>com.acl.controller.log_out_Servlet</servlet-name>
+    <url-pattern>/acl/log_out_</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>com.acl.controller.empView</servlet-name>
     <servlet-class>com.acl.controller.empView</servlet-class>
   </servlet>
