--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error.jsp</location>
+  </error-page>
+  <session-config>
+    <session-timeout>1</session-timeout>
+  </session-config>
   <servlet>
     <servlet-name>com.acl.controller.loginServlet</servlet-name>
     <servlet-class>com.acl.controller.loginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>com.acl.controller.loginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>com.acl.controller.log_out_Servlet</servlet-name>
-    <servlet-class>com.acl.controller.log_out_Servlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>com.acl.controller.log_out_Servlet</servlet-name>
-    <url-pattern>/acl/log_out_</url-pattern>
+    <url-pattern>/home</url-pattern>
   </servlet-mapping>
   <servlet>
     <servlet-name>com.acl.controller.empView</servlet-name>
