--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,6 +4,10 @@
     <error-code>404</error-code>
     <location>/error.jsp</location>
   </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/logout</location>
+  </error-page>
   <session-config>
     <session-timeout>1</session-timeout>
   </session-config>
