--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <resource-ref>
+  	<description>DB Connection</description>
+  	<res-ref-name>jdbc/demoDB</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
   <error-page>
     <error-code>404</error-code>
     <location>/error.jsp</location>
@@ -9,7 +15,7 @@
     <location>/logout</location>
   </error-page>
   <session-config>
-    <session-timeout>1</session-timeout>
+    <session-timeout>15</session-timeout>
   </session-config>
   <servlet>
     <servlet-name>com.acl.controller.loginServlet</servlet-name>
@@ -19,20 +25,12 @@
     <servlet-name>com.acl.controller.loginServlet</servlet-name>
     <url-pattern>/home</url-pattern>
   </servlet-mapping>
-  <servlet>
+  <!-- <servlet>
     <servlet-name>com.acl.controller.empView</servlet-name>
     <servlet-class>com.acl.controller.empView</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>com.acl.controller.empView</servlet-name>
-    <url-pattern>/emp</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>com.acl.controller.empView1</servlet-name>
-    <servlet-class>com.acl.controller.empView</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>com.acl.controller.empView1</servlet-name>
-    <url-pattern>/Manage Employees-view</url-pattern>
-  </servlet-mapping>
+    <url-pattern>/secured/employee_view</url-pattern>
+  </servlet-mapping> -->
 </web-app>
