--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,14 +6,14 @@
   	<res-type>javax.sql.DataSource</res-type>
   	<res-auth>Container</res-auth>
   </resource-ref>
-  <error-page>
+  <!-- <error-page>
     <error-code>404</error-code>
     <location>/error.jsp</location>
   </error-page>
   <error-page>
     <error-code>500</error-code>
     <location>/logout</location>
-  </error-page>
+  </error-page> -->
   <session-config>
     <session-timeout>15</session-timeout>
   </session-config>
